Parsing error fix

--- a/rules/ruleset_v1.yaml
+++ b/rules/ruleset_v1.yaml
@@ -16,4 +16,4 @@ rules:
         abstract: false
     emit: |
       f"""ex:{name} a owl:Class ;
-        rdfs:label {name} ."""
+        rdfs:label "{name}" ."""
