--- a/rules/SXPF_ruleset_1.yaml
+++ b/rules/SXPF_ruleset_1.yaml
@@ -36,7 +36,7 @@ rules:
       """
 
   - rule:
-    name: 2a) simpleType -> Class
+    name: 2a) simpleType -> DatatypeProperty
     element_type: XsdSimpleType
     emit: |
       f"""
@@ -46,7 +46,7 @@ rules:
       """
 
   - rule:
-    name: 2b) simpleType(Restriction) -> Class
+    name: 2b) simpleType(Restriction) -> DatatypeProperty
     element_type: XsdAtomicRestriction
     emit: |
       f"""
@@ -57,7 +57,22 @@ rules:
       """
 
   - rule:
-    name: 3a) annotation (complexType) -> comment ;
+    name: 3a) attribute -> DatatypeProperty
+    element_type: XsdComplexType
+    selector:
+    - pattern: has_attribute
+      attribute: All
+    emit: |
+      f"""
+      {PREFIX}:has{get_elem_name(concept)} a owl:DatatypeProperty ;
+        rdfs:label 'has{get_elem_name(concept)}'@en ;
+        rdfs:domain {PREFIX}:{get_elem_name(element)} ;
+        rdfs:range {check_datatype(concept)} ;
+        {prov_block}
+      """
+
+  - rule:
+    name: 3a) annotation (complexType) -> comment 
     element_type: XsdComplexType
     selector:
     - pattern: has_attribute
@@ -65,5 +80,41 @@ rules:
     emit: |
       f"""
       {PREFIX}:{get_elem_name(element)} rdfs:comment '{element.annotation}'@en ;
+        {prov_block}
+      """
+
+  - rule:
+    name: 3b.a) annotation (simpleType) -> comment 
+    element_type: XsdSimpleType
+    selector:
+    - pattern: has_attribute
+      attribute: annotation
+    emit: |
+      f"""
+      {PREFIX}:has{get_elem_name(element)} rdfs:comment '{element.annotation}'@en ;
+        {prov_block}
+      """
+
+  - rule:
+    name: 3b.b) annotation (simpleType) -> comment 
+    element_type: XsdAtomicRestriction
+    selector:
+    - pattern: has_attribute
+      attribute: annotation
+    emit: |
+      f"""
+      {PREFIX}:has{get_elem_name(element)} rdfs:comment '{element.annotation}'@en ;
+        {prov_block}
+      """
+
+  - rule:
+    name: 3c) annotation (attribute) -> comment 
+    element_type: XsdAttribute
+    selector:
+    - pattern: has_attribute
+      attribute: annotation
+    emit: |
+      f"""
+      {PREFIX}:has{get_elem_name(element)} rdfs:comment '{element.annotation}'@en ;
         {prov_block}
       """
